Bug 309007 - no classes displayed after xmi file loading
Summary: no classes displayed after xmi file loading
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-25 19:15 UTC by Ralf Habacker
Modified: 2013-11-02 17:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-10-25 19:15:27 UTC
When loading an xmi file containing classes, no classes are displayed. 


Reproducible: Always

Steps to Reproduce:
1. create some classes 
2. save as xmi
3. load same xmi file
Actual Results:  
No classes are displayed

Expected Results:  
the classes from the file should be displayed.

Classes are displayed after pressing the fit or 100% button
Comment 1 Ralf Habacker 2012-10-26 19:46:17 UTC
SVN commit 1322694 by habacker:

Bug fix not displaying widgets after load.


 M  +1 -0      ChangeLog  
 M  +1 -2      umbrello/umlscene.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1322694