Bug fix not displaying widgets after load.

BUG: 309007

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1322694